# semco

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
ai/: Cargo.toml
ai/src/: lib.rs
ai/src/intent/: mod.rs
core/: Cargo.toml
core/src/: block.rs  lib.rs
core/src/consensus/: pow.rs
docs/: whitepaper.md
