[workspace]
members = [
    "core",
    "ai",
    "crypto",
    "node",
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Semco Team"]
description = "A Decentralized AI Intent Network"
license = "MIT"
repository = "https://github.com/yourusername/Semco"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"
thiserror = "1.0.40"
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
rand = "0.8.5"
sha2 = "0.10.6"
blake3 = "1.3.3"
libp2p = { version = "0.51", features = ["full"] }
rocksdb = "0.20"
clap = { version = "4.3", features = ["derive"] }
config = "0.13"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
